--- a/MyTunes.Shared/MyTunes.Shared.csproj
+++ b/MyTunes.Shared/MyTunes.Shared.csproj
@@ -31,6 +31,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
     <Compile Include="SongLoader.cs" />
+    <Compile Include="IStreamLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
