Added abstraction implementation for iOS project. NOTE: PROJECT does not build due to some "iOS automatic provisioning" error iOS -> StreamLoader

--- a/MyTunes.iOS/MyTunes.iOS.csproj
+++ b/MyTunes.iOS/MyTunes.iOS.csproj
@@ -154,6 +154,7 @@
     <Compile Include="AppDelegate.cs" />
     <Compile Include="ViewControllerSource.cs" />
     <Compile Include="MyTunesViewController.cs" />
+    <Compile Include="StreamLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyTunes.Shared\MyTunes.Shared.csproj">
